# 1_python_training

./: README.md
.github/: copilot-instructions.md
Advanced/: README.md
Basic/: README.md
Basic_Image_Classifier/: README.md  main.py  pyproject.toml
Basic_python/: hello_world.py
CV_Critiquer/: README.md  main.py  pyproject.toml
Simple_AI_Agent/: README.md  main.py  main_llm_notworking.py  pyproject.toml
